tests/NormalTests/paczka1/fuzzy1/69065861.err
Error in line 1: KlGxd A97 86,84
Error in line 5: o0Xw0c3 A377 332,5
Error in line 8: KlGxd A178 88,5
Error in line 11: 5mdqd1 S629 28,5
Error in line 28: fJjJsrAles A377 77,7
Error in line 23: KlGxd A377 77,3
Error in line 32: o0Xw0c3 A178 28,0
